Bug 135640 - Sidebar: Styles tree doesn't expand when clicking on text (gtk3)
Summary: Sidebar: Styles tree doesn't expand when clicking on text (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-08-11 14:44 UTC by Xisco Faulí
Modified: 2020-09-16 07:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (9.40 KB, application/vnd.oasis.opendocument.text)
2020-08-11 14:44 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-08-11 14:44:50 UTC
Created attachment 164165 [details]
sample file

Steps to reproduce:
1. Clean the user profile
2. Open attached document
3. Click on Styles in the sidebar
4. Click on the Title text in the document

-> Heading tree should expand and Title selected

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 0de191e1d201d691c2196cf1aef412a98affb66f
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-08-11 14:45:19 UTC
Not reproduced with GEN
Comment 2 Xisco Faulí 2020-08-11 14:46:24 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fe9a13dc0e6d1384416c2a2343223b33925fc925

author	Caolán McNamara <caolanm@redhat.com>	2020-04-26 15:43:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-29 09:46:08 +0200
commit fe9a13dc0e6d1384416c2a2343223b33925fc925 (patch)
tree a43a8ea0cc46407b8932dced64cf34d595f3b3e9
parent cf36fe5eb41910c26d58fb25e54ccf2e0ee01365 (diff)
weld SfxTemplatePanelControl

Bisected with: bibisect-linux64-7.0

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2020-08-12 18:24:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7956d0593cec116d05ca205dab8c7ae1646b6db0

tdf#135640 ensure parent rows are expanded on scolling to make a row visible

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-08-12 18:25:14 UTC
fixed in master, backport to 7-0 in gerrit
Comment 5 Commit Notification 2020-08-12 23:27:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/1138c3d51a2e5caea7832597c00c62918299a3d7

tdf#135640 ensure parent rows are expanded on scolling to make a row visible

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.