tdf#135640 ensure parent rows are expanded on scolling to make a row visible

Change-Id: I37e55ed8d0d3d5916950228ba78982b90356fbc2